# chatbot-server

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  chat.py  products.py
core/: config.py  dependency.py
data/db/: index.faiss  index.pkl
models/: schemas.py
services/: chatbot_service.py  product_service.py
services/interface/: chat_interface.py  product_interface.py
system_prompts/: prompt_v1.py
utils/: groq_client.py
