[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.12.1",
    "uvicorn>=0.37.0",
]
