[project]
name = "chatbot"
version = "0.1.0"
description = "RAG Based chatbot backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.119.0",
    "ipykernel>=7.0.1",
    "jq>=1.10.0",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.12.1",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.37.0",
]
